# nanokrnl

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  WORKFLOW.md  WORKLOG.md  rust-toolchain.toml
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/state/: agent-replay-e470ab1a-891e-423f-9ee7-e73c9301d6f6.jsonl  hud-stdin-cache.json
.omc/state/checkpoints/: checkpoint-2026-06-11T06-39-52-418Z.json  checkpoint-2026-06-11T21-15-30-989Z.json
.omc/state/sessions/e470ab1a-891e-423f-9ee7-e73c9301d6f6/: hud-state.json  last-tool-error-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
boot/: Cargo.toml
boot/src/: main.rs
crash/: Cargo.toml
crash/src/: main.rs
docs/: 9p-over-nanox.md  wani-webassembly-nt-interface.md
driver/: Cargo.toml
driver/.cargo/: config.toml
driver/.omc/state/: hud-stdin-cache.json
driver/.omc/state/sessions/e470ab1a-891e-423f-9ee7-e73c9301d6f6/: hud-state.json  pre-tool-advisory-throttle.json
driver/src/: main.rs
drivers/: README.txt
emu/: Cargo.toml  README.md  ROADMAP.md  SPEC.md  build-wasm.sh
emu/examples/: cmd_session.rs  conformance.rs  core_dump.rs  diff_trace.rs  diff_unicorn.rs  gdb_server.rs  inspect_kernel.rs  memory_dmp.rs  p9_host.rs  pipe_test.rs  snapshot.rs
emu/src/: bootinfo.rs  devices.rs  elf.rs  gdb.rs  lib.rs  machine.rs  mmu.rs  pe.rs  wasm.rs
kernel/: Cargo.toml  build.rs
kernel/src/: dump.rs  init.rs  kd.rs  lib.rs  main.rs  syscalls.rs
kernel/src/cm/: mod.rs
kernel/src/ex/: mod.rs
kernel/src/hal/: apic.rs  mod.rs  pic.rs  port.rs  serial.rs
kernel/src/io/: console.rs  mod.rs  namespace.rs  null.rs  p9.rs  pipe.rs  ramfs.rs
kernel/src/ke/: bugcheck.rs  debug.rs  dispatcher.rs  dpc.rs  gdt.rs  idt.rs  irql.rs  kdcom.rs  mod.rs  pcr.rs  scheduler.rs  selectors.rs  spinlock.rs  syscall.rs  thread.rs  traps.rs  usermode.rs
kernel/src/ldr/: exports.rs  loaded.rs  mod.rs  mui.rs  ntdll.rs  pe.rs
kernel/src/mm/: mod.rs  phys.rs  pool.rs  virt.rs
kernel/src/ob/: handle.rs  mod.rs
kernel/src/ps/: mod.rs
kernel/src/rtl/: bitmap.rs  list.rs  mod.rs  status.rs  string.rs
kernel/tests/: bitmap_proptest.rs  conformance.rs
kernel32/: Cargo.toml
kernel32/.cargo/: config.toml
kernel32/src/: lib.rs
msvcrt/: Cargo.toml
msvcrt/src/: lib.rs
ntabi/: Cargo.toml
ntabi/src/: lib.rs
scripts/: build-app.sh  build-crash.sh  build-driver.sh  build-kernel32.sh  build-msvcrt.sh  build-qemu-wasm.sh  build-userapp.sh  build-userapp2.sh  build-worker.sh  driver-test.sh  qemu-test.sh  run-interactive.sh
sortexe/: README.txt
tools/: dmp_check.py  gen_pdb.py  kdbg_check.py
userapp/: Cargo.toml
userapp/.cargo/: config.toml
userapp/src/: main.rs
userapp2/: Cargo.toml
userapp2/.cargo/: config.toml
userapp2/src/: main.rs
wasm/: Cargo.toml  build.sh
wasm/emu/: Cargo.toml
wasm/emu/examples/: run_whoami.rs  trace_whoami.rs
wasm/emu/src/: lib.rs  pe.rs
wasm/programs/hello/: Cargo.toml
wasm/programs/hello/src/: lib.rs
wasm/src/: lib.rs
wasm/src/ke/: mod.rs  spinlock.rs
wasm/src/mm/: mod.rs  pool.rs
wasm/web/: index.html  run-node.mjs
web/: README.md  index.html  run.sh
web/nanox/: background.js  bridge.py  index.html  nanox.wasm  p9-server.js
web/nanox/tracks/: dubmood-The_Scene_Is_Dead-ft2demo.xm  dubmood-_-keygen-18.xm  manifest.json
web/ntemu/: background.js  index.html  ntemu.wasm
web/ntemu/tracks/: .gitignore  README.txt
winbin/: README.txt
worker/: Cargo.toml
worker/.cargo/: config.toml
worker/src/: main.rs
